# icm_20948

./: CMakeLists.txt  LICENSE  README.md  icm_20948.rosinstall  package.xml  setup.cfg  setup.py
.github/workflows/: build-check-bot.yml  ros1-build-check-bot.yml  ros2-build-check-bot.yml
firmware/: firmware.ino
icm_20948/: imu_node.py
include/: icm_20948_example.h
include/ICM_20948_ROS_Example/: ICM_20948_ROS_Example.ino
include/imu_node/: imu_node.h
launch/: icm_20948_example.launch  run.launch  run.launch.xml
rviz/: icm_20948_example.rviz  imu.rviz
rviz2/: imu.rviz
script/: imu_node.py
src/: icm_20948_example.cpp  imu_node.cpp
