<?xml version="1.0" encoding="UTF-8"?>
<package format="2">
  <name>icm_20948</name>
  <version>2.0.0</version>
  <description>ROS driver for the ICM-20948 with Seeeduino XIAO</description>
  <maintainer email="zip@todo.todo">Alpaca-zip</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>serial</depend>
  <depend>sensor_msgs</depend>
  <depend>imu_tools</depend>
  <depend>rqt</depend>
</package>
